# GIT-MCP-FULL

./: .env.example  .gitignore  Dockerfile  README.md  biome.json  docker-compose.dev.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  eval.yml
apps/dashboard-api/: Dockerfile  package.json
apps/dashboard-api/src/: app.ts  config.ts  index.ts  types.ts
apps/embedder/: Dockerfile  README.md
apps/ingestion-worker/: Dockerfile  pyproject.toml
apps/ingestion-worker/src/ingestion_worker/: config.py  main.py  types.py
apps/ingestion-worker/src/ingestion_worker/chunking/: __init__.py  structure_aware.py  tokenizer.py
apps/ingestion-worker/src/ingestion_worker/contextual/: __init__.py  claude.py
apps/ingestion-worker/src/ingestion_worker/embedding/: __init__.py  client.py
apps/ingestion-worker/src/ingestion_worker/enrichment/: __init__.py  entities.py
apps/ingestion-worker/src/ingestion_worker/parsing/: __init__.py  html.py  markdown.py  pdf.py
apps/ingestion-worker/src/ingestion_worker/persistence/: __init__.py  postgres.py
apps/ingestion-worker/src/ingestion_worker/queue/: __init__.py  rq_worker.py
apps/ingestion-worker/tests/: test_chunking.py  test_entities.py
apps/mcp-server/: Dockerfile  package.json
apps/mcp-server/src/: config.ts  index.ts  server.ts  types.ts
docs/adrs/: 0001-monorepo-layout.md  0002-drizzle-as-schema-truth.md
docs/runbooks/: local-dev.md
legacy-git-mcp/: .dockerignore  .env.example  README.md  package.json
legacy-git-mcp/src/: tools.js
src/: index.js
(+33 files in other folders)
