[project]
name = "ingestion-worker"
version = "1.0.0"
description = "SAP Context MCP - Document ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
  "rq>=2.0",
  "redis>=5.0",
  "psycopg[binary,pool]>=3.2",
  "pgvector>=0.3",
  "unstructured[pdf,docx,md]>=0.16",
  "anthropic>=0.40",
  "httpx>=0.27",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "tiktoken>=0.8",
  "python-dotenv>=1.0",
  "structlog>=24.0",
  "tenacity>=9.0",
  "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[project.scripts]
ingestion-worker = "ingestion_worker.queue.rq_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
